# emendas_scraper

./: Makefile  README.md  pyproject.toml  raspador_emendas.py  requirements.txt
.github/workflows/: execucao-periodica.yaml
